Cascading Change Log

3.0.3 [unreleased]

3.0.2

  Updated Apache Tez to 0.6.2 to prevent deadlocks in complex DAGs. Note this release is incompatible with Tez 0.6.1.

  Fixed issue where platform information was not consistently retrieved and reported where possible.

  Fixed issue in c.p.AppProps where getApplicationJarPath would return null when used with a j.u.Properties instance.

  Fixed issue that prevented o.a.h.m.OutputCollector sub-classes from properly flushing.

  Fixed issue on Apache Tez where diagnostic failure data would not propagate.

  Fixed issue where c.f.h.MapReduceFlow could throw a NPE.

  Updated c.f.h.MapReduceFlow to accept properties and c.f.FlowDescriptors values map.

  Fixed issue when resolving Fields through a Boundary when immediately following grouping operations.

  Fixed issues concerning detailed stats retrieval robustness for both MapReduce and Tez platforms.

  Fixed issue where child stats detail retrieval may not fetch final state of children.

  Fixed issue where c.s.FlowNodeStats node kind could be mislabeled.

  Fixed issue where c.u.ShutdownUtil could log a NPE if a hook is removed during JVM shutdown.

  Updated build to exclude jgrapht-ext, further isolation of jgrapht apis to support reliable shading.

  Fixed issue where c.f.p.ProcessFlow would not propagate the application name, version, tags, etc to the management
  services.

  Fixed issue where c.s.FlowStepStats#getProcessStatusURL() always returned null for Apache MapReduce and Tez platforms.

  Fixed issue on Apache Tez where a split before and subsequent splicing back into a c.p.HashJoin could create an
  invalid plan.

  Fixed issue with c.t.u.TupleHasher#ObjectHasher not being serializable.

  Fixed issue where an unreachable YARN timeline server could cause the application to fail.

  Fixed issue with NPE when retrieving Tez task status from timeline server.

3.0.1
